# arca

./: .gitignore  Cargo.toml  document.md  specifications_sync_e2ee.md
arca/: Cargo.toml
arca-server/: Cargo.toml
arca-server/src/: main.rs
arca/src/: app.rs  cli.rs  config.rs  crypto.rs  db.rs  main.rs  progress.rs  remote.rs  scanner.rs  syncer.rs  watcher.rs
