[package]
name = "arca-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
blake3 = "1.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.10", features = ["v4"] }
