[package]
name = "arca"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
directories = "5.0"
notify = "6.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ureq = { version = "=2.9.7", features = ["json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
