[package]
name = "arca"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
directories = "5.0"
hkdf = "0.12"
indicatif = "0.17"
notify = "6.1"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
ureq = { version = "=2.9.7", features = ["json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zstd = "0.13"
